<resources>
    <string name="app_name">BoardCa</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"로그인에 성공하셨습니다!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="facebook_app_id">873009302900995</string>
    <string name="fb_login_protocol_scheme">fb873009302900995</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin_email">Signin by email</string>
    <string name="signin_google">Google login</string>
    <string name="signin_facebook">Facebook login</string>
    <string name="signin_twitter">Twitter login</string>
    <string name="signin_kakao">Kakao login</string>
    <string name="signup_complete">Membership success</string>
    <string name="signin_complete">Login success</string>
    <string name="signout">Signout</string>
    <string name="signout_success">Signout success</string>
    <string name="signout_fail">Signout fail</string>
    <string name="signout_fail_null">Please enter your email and password</string>
    <string name="signin_easy">간편로그인</string>
    <string name="main_text">BoardCa는 건전한 음주문화를 지향합니다.</string>
    <string name="myAppName">BoardCa</string>
    <string name="home">Home</string>
    <string name="Recipe">Recipe</string>
    <string name="game">Game</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="community">Community</string>
    <string name="map">Map</string>
    <string name="post">Post</string>
    <string name="following">Following</string>
    <string name="follower">Follower</string>
    <string name="follow">Follow</string>
    <string name="follow_cancel">Follow cancel</string>
    <string name="profile">Profile</string>
    <string name="count_0">0</string>
    <string name="alarm_favorite">Liked the press</string>
    <string name="alarm_comment">left a message</string>
    <string name="alarm_follow">has started to follow your account</string>
    <string name="send">Send</string>
    <string name="upload_image">Photo Upload</string>
    <string name="hint_image_content">Image description</string>
    <string name="upload_success">Upload success</string>
    <string name="upload_fail">Upload fail</string>
    <string name="back">Back</string>
    <string name="search_bar">   search</string>
    <string name="title_activity_nav">NavActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">닉네임이 들어가는 자리</string>
    <string name="nav_header_subtitle">ID가 들어가는 자리</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">설정</string>
    <string name="menu_home">Home</string>
    <string name="menu_recipe">레시피</string>
    <string name="menu_game">game</string>
    <string name="menu_community">커뮤니티</string>
    <string name="menu_community_sub1">숙취 게시판</string>
    <string name="menu_community_sub2">정보 공유</string>
    <string name="menu_community_sub3">질문하기</string>
    <string name="menu_community_sub4">신고하기</string>
    <string name="menu_map">지도</string>
    <string name="menu_signup">회원가입</string>
    <string name="menu_web">Web</string>
    <string name="title_activity_web__fragment">Web_Fragment</string>
    <string name="menu_mypage">내 게시글 확인</string>
    <string name="map_search">장소, 주소 검색</string>
    <string name="signin_list">약관 동의 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020
        \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 정보 입력 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020
        \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020 \u0020
        가입 완료</string>
    <string name="signin_2">BoardCA 회원가입</string>
    <string name="signtext2">고객님의 개인정보 보호와 안전한 거래를 위하여\n실명인증을 확인하고 있습니다.</string>
    <string name="signtext2_2">
        * 휴대폰으로 성인 인증을 하시면 다음 화면으로 이동합니다.\n
        * 만 19세 미만은 보드카 회원가입이 불가능합니다.
    </string>
</resources>