<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_home"
        android:icon="@drawable/home"
        android:enabled="true"
        android:title="@string/home" />

    <item
        android:id="@+id/action_recipe"
        android:icon="@drawable/ic_kitchen_black_24dp"
        android:enabled="true"
        android:title="@string/Recipe" />

    <item
        android:id="@+id/action_game"
        android:icon="@drawable/ic_group_black_24dp"
        android:enabled="true"
        android:title="@string/game" />

    <item
        android:id="@+id/action_community"
        android:icon="@drawable/ic_comment_black_24dp"
        android:enabled="true"
        android:title="@string/community" />
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_location_on_black_24dp"
        android:enabled="true"
        android:title="@string/map" />

</menu>