<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_recipe"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_recipe" />
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_game" />
        <item
            android:id="@+id/nav_community"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_community" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_map" />
    </group>

    <item android:title="버그 보내기">
        <menu>
            <item
                android:id="@+id/nav_signup"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_signup" />
            <item
                android:id="@+id/nav_webview"
                android:icon="@drawable/ic_menu_send"
                android:title="웹으로보기" />
        </menu>
    </item>

</menu>
