<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/nav_home"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/bottm_nav_home"
        android:name="com.example.boardca_app.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/bottm_nav_recipe"
        android:name="com.example.boardca_app.ui.recipe.RecipeFragment"
        android:label="@string/menu_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/bottm_nav_game"
        android:name="com.example.boardca_app.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" />

    <fragment
        android:id="@+id/bottm_nav_community"
        android:name="com.example.boardca_app.ui.community.CommunityFragment"
        android:label="@string/menu_community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/bottm_nav_map"
        android:name="com.example.boardca_app.ui.share.MapFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_map" />


</navigation>