<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <EditText android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:passwordToggleEnabled="true">

            <EditText android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button android:id="@+id/email_loginbtn"
            android:theme="@style/ButtonStyle"
            android:text="@string/signin_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp" />

        <Button android:text="@string/signin_facebook"
            android:textColor="@color/colorWhite"
            android:background="@drawable/btn_signin_facebook"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp" />

        <Button android:text="@string/signin_google"
            android:background="@drawable/btn_signin_google"
            android:layout_width="match_parent"
            android:textColor="@color/colorWhite"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp" />

        <Button android:layout_width="match_parent"
            android:textColor="@color/colorKakaoSignIn"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="80dp"
            android:text="@string/signin_kakao"
            android:background="@drawable/btn_signin_kakao"/>

    </LinearLayout>

</RelativeLayout>