<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.signup.CertifiedActivity">

    <LinearLayout android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="가\n입"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"/>

    </LinearLayout>

    <View
        android:layout_width="300dp"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:background="#cccccc"/>

    <!-- 이미지 뷰 / 순서 -->

    <ImageView
        android:id="@+id/sign_cheke1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginTop="140dp"
        android:layout_marginLeft="40dp"
        android:background="@drawable/trumpet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/signin_check" />

    <!-- 두번째 -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/trumpet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="21dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="145dp"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/signin_check" />

    <!-- 세번째 -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="250dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/trumpet2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 네번째 -->
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginLeft="350dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/trumpet2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="167dp"
        android:text="@string/signin_list"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="500dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="180dp"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="204dp"
            android:text="@string/signin_2" />

        <!-- 휴대폰 인증하기 임시버튼 -->
        <ImageButton
            android:id="@+id/signup_next_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="130dp"
            android:layout_marginLeft="-80dp"
            android:background="@drawable/ic_arrow_forward_black_100dp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="245dp"
            android:layout_marginLeft="80dp"
            android:gravity="center|center_vertical"
            android:text="@string/signtext2"
            android:textSize="13sp"/>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        android:text="@string/signtext2_2"
        android:textSize="13sp" />


</RelativeLayout>