<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity2">


    <LinearLayout android:id="@+id/signin_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="로\n그\n인\n"
            android:textSize="25sp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp">
            <EditText android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:passwordToggleEnabled="true">
            <EditText android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:layout_gravity="center"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="자동로그인"
                android:layout_marginLeft="100dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="아이디 저장"
                android:layout_marginLeft="200dp"/>

            <Button android:layout_marginTop="60dp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/email_signin_btn"
                android:textColor="@color/colorKakaoSignIn" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/signin_easy"
            android:textSize="14sp" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginLeft="90dp"
                android:background="@drawable/btn_signin_facebook_test"
                android:textColor="@color/colorKakaoSignIn" />
            <Button android:layout_width="60dp"
                android:layout_height="60dp"
                android:textColor="@color/colorKakaoSignIn"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_signin_gogole_test" />

            <Button android:layout_width="60dp"
                android:layout_height="60dp"
                android:textColor="@color/colorKakaoSignIn"
                android:layout_marginLeft="20dp"
                android:background="@drawable/btn_signin_kakao_test" />
        </GridLayout>


    </LinearLayout>





</RelativeLayout>